--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "notion-block-renderer": "^2.2.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-simple-typewriter": "^5.0.1",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
